k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fixbot-backstage
  namespace: fixbot
  labels:
    app: fixbot-backstage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fixbot-backstage
  template:
    metadata:
      labels:
        app: fixbot-backstage
    spec:
      containers:
        - name: backstage
          image: fdhliakbar/fixbot-backstage:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7007
              name: http
          resources:
            requests:
              memory: '768Mi'
              cpu: '300m'
            limits:
              memory: '2Gi'
              cpu: '1000m'

          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 7007
            initialDelaySeconds: 90
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 7007
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
